# test-repo-unique-12345

./: README.md
ChemPlasKin/: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  environment.yaml
ChemPlasKin/data/LXCat/: README.md
ChemPlasKin/data/PAC_kinetics/: README.md
ChemPlasKin/examples/H2O2He/: chemPlasProperties  controlDict
ChemPlasKin/include/: plasmaReactor.h
ChemPlasKin/src/: master.cpp
